Fixes font size for error message on mobile

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -886,4 +886,8 @@ from { width: 0; }
         font-size: 20px;
     }
 
+    .message {
+        font-size: 0.4em;
+    }
+
 }
